--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "coffee-script": "^1.7.1",
     "coffeeify": "^0.6.0",
-    "ecstatic": "^0.5.1",
+    "ecstatic": "0.5.1",
     "jadeify": "^2.1.1",
     "sassify": "^0.5.0",
     "jade": "^1.3.1"
