--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ecstatic": "0.5.1",
     "jadeify": "^2.1.1",
     "sassify": "^0.5.0",
-    "jade": "^1.3.1"
+    "jade": "^1.3.1",
+    "uglify-js": "^2.4.13"
   },
   "devDependencies": {
     "browserify": "^3.46.0",
